# tashkeel

./: LICENSE  README.md  pyproject.toml
tashkeel/: __init__.py
tashkeel/shakkala/: __init__.py  helper.py  shakkala.py
tashkeel/shakkala/dictionary/: __init__.py  input_vocab_to_int.py  output_int_to_vocab.py
