[tool.poetry]
name = "tashkeel"
version = "0.1.0"
description = "A vocalizer for Arabic text using Shakkala"
authors = ["mush42 <ibnomer2011@hotmail.com>"]
license = "GPL v2"
readme = "README.md"
packages = [{include = "tashkeel"}]


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
nltk = "^3.8.1"
onnxruntime = "^1.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
